# hh_api_project

./: .env  .gitignore  README.md  main.py  main_db.py  pyproject.toml  run_create_tables.py
data/: vacancies.json
src/: db.py  db_manager.py  helpers.py  hh_api.py  json_saver.py  vacancy.py
tests/: test_hh_api.py  test_json_saver.py  test_vacancy.py
